<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="223dp"
        app:srcCompat="@drawable/find_movie" />

    <TextView
        android:id="@+id/contentSignUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="30dp"
        android:fontFamily="casual"
        android:text="@string/content"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#F8E8B7"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:fontFamily="casual"
        android:text="@string/user"
        android:textColor="#F8E8B7"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:fontFamily="casual"
        android:hint="@string/user_type"
        android:inputType="textEmailAddress"
        android:textColor="#F8E8B7"
        android:textColorHint="#61EDDFB5"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:fontFamily="casual"
        android:text="@string/user_password"
        android:textColor="#F8E8B7"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/inputPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:hint="@string/user_password_type"
        android:inputType="textPassword"
        android:textColor="#F8E8B7"
        android:textColorHint="#61EDDFB5"
        android:textSize="14sp" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/login"
        android:textAlignment="center"
        android:textStyle="bold" />
</LinearLayout>